--- a/css/common.css
+++ b/css/common.css
@@ -25,7 +25,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
-  color: #212121;
+  color: #10162f;
   line-height: 1.5;
 }
 
