--- a/css/common.css
+++ b/css/common.css
@@ -60,7 +60,8 @@ button {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1rem;
+  row-gap: 2rem;
+  column-gap: 1rem;
 }
 
 .tasks li a {
@@ -148,7 +149,7 @@ button {
 ---------------------------------------- */
 
 #name-input {
-  width: 50%;
+  width: 100%;
   padding: 1rem;
   border: 0.188rem solid #4338ca;
   border-radius: 0.5rem;
@@ -165,7 +166,7 @@ button {
 ---------------------------------------- */
 
 #validation-input {
-  width: 50%;
+  width: 100%;
   padding: 1rem;
   border-radius: 0.5rem;
   margin: 1.25rem 0;
@@ -223,13 +224,37 @@ button {
 ---------------------------------------- */
 
 .login-form {
-  max-width: 30%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   padding-bottom: 3rem;
   background-color: #f8f9fa;
   border-radius: 0.5rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (min-width: 480px) {
+  .login-form {
+    max-width: 80%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .login-form {
+    max-width: 60%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .login-form {
+    max-width: 40%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .login-form {
+    max-width: 30%;
+  }
 }
 
 .login-form label {
